# core-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: config.py  main.py  metrics.py
app/chat/: __init__.py  prompt.py  registry.py  router.py  schemas.py  service.py
app/chat/adapters/: __init__.py  anthropic_adapter.py  base.py  mock_adapter.py  openai_adapter.py  xai_adapter.py
app/extract/: __init__.py  prompt.py  router.py  schemas.py  service.py
app/forecasting/: engine.py  router.py  schemas.py  service.py
app/forecasting/engines/: __init__.py  base.py  chronos_engine.py  ml_engine.py  registry.py  seasonalnaive_engine.py  statsforecast_engine.py  timesfm_engine.py
app/forecasting/features/: __init__.py  calendar.py  context.py  drivers.py  weather.py
tests/: conftest.py  test_calendar_features.py  test_chat.py  test_context_contract.py  test_engines.py  test_extract.py  test_forecast.py  test_ml_engine.py  test_payday_drivers.py  test_render_deployment.py  test_weather_client.py
