[project]
name = "core-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langgraph>=1.0.10",
    "langsmith>=0.7.14",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.0",
    "redis>=7.3.0",
    "uvicorn>=0.41.0",
]
