[project]
name = "core-ai"
version = "0.1.0"
description = "GastronomIA core-ai microservice — demand forecasting"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.3.0",
    "statsforecast>=2.0.0",
    "utilsforecast>=0.2.0",
    # E09: Text-to-SQL LLM adapters (openai SDK also used for xAI via base_url).
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    # declared but not actively used in this increment
    "langchain>=1.0.0",
    "langgraph>=0.3.0",
    "langsmith>=0.2.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
# Heavy forecasting models are wired behind the ForecastEngine contract but kept
# out of the default install so the service stays light. Add when implementing
# the corresponding engine adapter (see README "Pluggable engines"):
#   uv add timesfm              # enables engine="timesfm"
#   uv add chronos-forecasting  # enables engine="chronos"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
